<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- About -->
    <string name="link">Website: github.com/dkim0419/SoundRecorder</string>

    <!-- Toolbar -->
    <string name="app_name">Sound Recorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists: please choose a different file name</string>
    <string name="toast_file_does_not_exist">The selected file does not exist</string>
    <string name="toast_unable_to_extract_text">Unable to extract text from this file audio</string>
    <string name="toast_sync_with_db">Synchronization between database and file system performed</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_device_not_connected_title">Device not connected</string>
    <string name="dialog_device_not_connected_message">The device is not connected to the network.\nTo continue, you must first establish a connection with Wi-Fi or data connection</string>
    <string name="dialog_file_convert">Extract Text From Audio</string>
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="customAlertDialogFromAudioTitle">Speech-To-Text</string>
    <string name="customAlertDialaogForExtractedTestButtonOk">Ok</string>
    <string name="customAlertDialaogForExtractedTestButtonCopy">Copy</string>
    <string name="textCopiedToClipboard">Text Copied To Clipboard</string>
    <string name="customAlertDialogFromAudioBodyDescription">Speech-To-Text</string>
    <string name="nameAlreadyExistsInDB">The entered name already exists in the app database</string>
    <string name="textExtractionInProgress">Extraction in progress, please wait</string>
    <string name="speech_to_text_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla ut eros nibh. Nulla facilisi. Sed iaculis velit nulla. Donec pharetra arcu augue,
        id ultrices erat porta id. Maecenas libero ipsum, ullamcorper ac sem eu, tincidunt molestie massa.
        consequat sem et enim efficitur, sit amet sollicitudin massa fermentum. Vestibulum placerat metus
        sed mattis iaculis. Nam id efficitur ex. Nullam dictum rutrum mi. Quisque maximus tincidunt sapien
        sit amet tristique.  </string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Preferences -->
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>

    <string name="pref_resyncDB_key">pref_Sync_Data</string>
    <string name="pref_resyncDB_title">Sync Data</string>
    <string name="pref_resyncDB_desc">Synchronize data with file system</string>

</resources>
